[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.10.0"
bs4 = "^0.0.1"
pandas = "^2.0.2"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
